[project]
name = "comfyui-rememberingutils"
description = "Helper nodes to display last seed and prompt."
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/bombless/comfyUI-RememberingUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bombless"
DisplayName = "comfyUI-RememberingUtils"
Icon = ""
